adds js and css to high scores page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,8 @@ ol {
 }
 
 ol li {
+    list-style: inside;
+    list-style-type: decimal;
     background-color: var(--deep-purple);
     margin: 0.5rem;
     color: var(--white);
@@ -85,6 +87,35 @@ ol li {
     font-style: italic;
     font-weight: 300;
     font-size: 18px;
+}
+
+#score-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+    width: 450px;
+    padding-bottom: 1rem;
+}
+
+#score-list > li {
+    color: black;
+    list-style:inside;
+    list-style-type: decimal;
+    background-color: #f7f0ff;
+    cursor: auto; 
+    width: auto;
+    margin-bottom: 0;
+    border-radius: 0px;
+    font-weight: 500;
+}
+
+#score-list > li:nth-child(even) {
+    background-color: #f2f1f4;;
+}
+
+.container {
+    margin-top: 3.5rem;
 }
 
 @media screen and (max-width: 768px) {
